src/css/app.scss
@import '~bootstrap-sass/assets/stylesheets/bootstrap/variables';

@import '../../node_modules/prismjs/themes/prism-okaidia';
@import '../../node_modules/prismjs/plugins/line-numbers/prism-line-numbers.css';

$font-size-extra-small: floor(($font-size-base * 0.8)); // ~11px

$qore-green: #7fba27;
$qore-purple: #81358a;
$qore-warning: #d99e0b;
$qore-danger: #d13913;
$qore-info: #2965cc;
$qore-gray: #8a9ba8;

$status-green: #418e22;
$status-light-green: lighten($status-green, 30);
$status-red: #d11f1f;
$status-light-red: lighten($status-red, 30);
$status-yellow: #e5d957;
$status-light-yellow: lighten($status-yellow, 30);
$status-orange: #f29a3c;
$status-light-orange: lighten($status-orange, 20);
$status-blue: #3197e0;
$status-light-blue: lighten($status-blue, 30);
$status-gray: #696969;
$status-light-gray: lighten($status-gray, 30);

$bgcolor: #eee;

@import './buttons';
@import './tables';

@import '../js/components/layout/style';
@import '../js/components/autostart/style';
@import '../js/components/badge/style';
@import '../js/components/collection_search/style';
@import '../js/components/controls/style';
@import '../js/components/footer/style';
@import '../js/components/groups/style';
@import '../js/components/info_table/style';
@import '../js/components/modal/style';
@import '../js/components/navigation/style';
@import '../js/components/pane/style';
@import '../js/components/resize/style';
@import '../js/components/source_code/style';
@import '../js/components/table/style';
@import '../js/components/topbar/style';
@import '../js/components/toolbar/style';
@import '../js/components/datepicker/style';
@import '../js/components/shorten/style';
@import '../js/components/chart/style';
@import '../js/components/log/style';
@import '../js/components/tree/style';
@import '../js/components/dropdown/style';
@import '../js/components/bubbles/style';
@import '../js/components/notifications/style';
@import '../js/components/code/style';
@import '../js/components/search/style';
@import '../js/components/new_table/style';
@import '../js/containers/mappers/diagram/style';
@import '../js/components/container/style';
@import '../js/components/infobar/style';
@import '../js/components/dashboard_module/style';
@import '../js/components/box/style';
@import '../js/components/instances_bar/style';

@import './not-supported';
@import './root';
@import './workflow';
@import './orders';
@import './pane';
@import './tabs';
@import './search';
@import './library';
@import './ocmd';
@import './job';
@import './jobs';
@import './alerts';
@import './auth';

html,
body,
.app,
.app__wrap,
.container-fluid {
  height: 100%;
  font-size: $font-size-base - 2 !important;
  font-family: 'Roboto', 'Arial';
}

*:focus,
*:active {
  outline: none !important;
}

.app,
.app_wrap {
  background-color: $bgcolor;
}

.pt-button,
.pt-input,
.pt-button[class*='pt-icon-']:before {
  font-size: 12px;
}

.pt-button {
  &.pt-intent-success {
    background-color: $qore-green !important;

    &:hover {
      box-shadow: inset 0 0 0 1px rgba(16, 22, 26, 0.4),
        inset 0 -1px 0 rgba(16, 22, 26, 0.2) !important;
      background-color: darken($qore-green, 5) !important;
    }
  }

  &.pt-intent-primary {
    background-color: $qore-purple !important;

    &:hover {
      box-shadow: inset 0 0 0 1px rgba(16, 22, 26, 0.4),
        inset 0 -1px 0 rgba(16, 22, 26, 0.2) !important;
      background-color: darken($qore-purple, 5) !important;
    }
  }
}

.pt-input-group.pt-intent-primary {
  .pt-input {
    box-shadow: 0 0 0 0 rgba(19, 124, 189, 0), 0 0 0 0 rgba(19, 124, 189, 0),
      inset 0 0 0 1px $qore-purple, inset 0 0 0 1px rgba(16, 22, 26, 0.15),
      inset 0 1px 1px rgba(16, 22, 26, 0.2) !important;
  }

  .pt-icon {
    color: $qore-purple !important;
  }
}

.pt-dark .pt-menu-item.pt-intent-primary,
.pt-dark .pt-menu-item.pt-intent-primary .pt-menu-item-label,
.pt-dark .pt-menu-item.pt-intent-primary:after,
.pt-dark .pt-menu-item.pt-intent-primary:before {
  color: #fff !important;
}

.pt-popover-content {
  max-height: 400px;
  overflow-y: auto;
}

.block {
  display: block !important;
}

.form-horizontal {
  /**
   * Resets Bootstrap position of checkboxes and radio for horizontal
   * forms.
   *
   * Bootstrap shift both types of controls by 20px to the left which
   * is undesirable in horizontal forms.
   */
  .radio input[type='radio'],
  .radio-inline input[type='radio'],
  .checkbox input[type='checkbox'],
  .checkbox-inline input[type='checkbox'] {
    margin-left: 0;
  }
}

/**
 * Resets the height of form-control elements to 33px to match the buttons height
 */
.form-control {
  height: 33px;
}

/**
* Adds red border for any invalid input or textarea
*/
.form-error {
  border: 1px solid #cf0000 !important;
}

iframe {
  width: 100%;
  height: calc(100vh - 100px);
  border: none;
}

pre.line-numbers {
  padding-left: 4em;
}

.multiple-input-group input {
  width: 50% !important;
}

.view-content,
.clear {
  clear: both;
}

.resource-name-link {
  display: block;
}

.resource-selector {
  float: left;
}

p.text-component {
  cursor: zoom-in;
}

.pt-menu.sidebar {
  border-radius: 0;
  height: 100%;
  margin-bottom: 30px;
  min-width: 42px;
  max-width: 42px;
  position: relative;
  z-index: 10;

  &.full {
    min-width: 180px !important;
    max-width: 180px !important;
  }
}

div.text-component {
  cursor: zoom-out;
  word-wrap: break-word;
}

.main-loading-text {
  margin-top: 150px;
}

.main-error-text,
.main-loading-text {
  font-family: 'Nunito';
}

.default-wrapper {
  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,f3f3f3+50,ededed+51,ffffff+100;White+Gloss+%232 */
  background: rgb(255, 255, 255); /* Old browsers */
  background: -moz-linear-gradient(
    -45deg,
    rgba(255, 255, 255, 1) 0%,
    rgba(243, 243, 243, 1) 50%,
    rgba(237, 237, 237, 1) 51%,
    rgba(255, 255, 255, 1) 100%
  ); /* FF3.6-15 */
  background: -webkit-linear-gradient(
    -45deg,
    rgba(255, 255, 255, 1) 0%,
    rgba(243, 243, 243, 1) 50%,
    rgba(237, 237, 237, 1) 51%,
    rgba(255, 255, 255, 1) 100%
  ); /* Chrome10-25,Safari5.1-6 */
  background: linear-gradient(
    135deg,
    rgba(255, 255, 255, 1) 0%,
    rgba(243, 243, 243, 1) 50%,
    rgba(237, 237, 237, 1) 51%,
    rgba(255, 255, 255, 1) 100%
  ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
}

svg.preloader {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  margin: auto;
}

.preloader-rect {
  fill: none;
  stroke-width: 8px;
  stroke: #9ccb3b;
  stroke-dasharray: 40;
  stroke-dashoffset: 50%;

  animation: movedash 1.5s forwards 0s infinite;
}

@keyframes movedash {
  to {
    stroke-dashoffset: 250%;
  }
}

.preloader-text {
  font-family: 'Orbitron';
}

.conn-options-item {
  line-height: 2;
}

.cpointer {
  cursor: pointer;
}

.positive-background {
  background-color: $status-light-green;
}

.negative-background {
  background-color: $status-light-red;
}

.nunito {
  font-family: 'Nunito';
}

.dashboard-title {
  font-family: 'Nunito';
  font-size: 25px;
  text-align: center;
  width: 100%;

  &:not(.with-subtitle) {
    margin-bottom: 30px;
  }
}

.dashboard-subtitle {
  font-family: 'Nunito';
  font-size: 18px;
  margin-bottom: 30px;
  text-align: center;
  width: 100%;
  color: #555;
}

.vab {
  vertical-align: bottom;
  display: inline-flex;
  transform: translateZ(initial);
}

pre {
  margin: 0 !important;
}

.has-link {
  cursor: pointer;
}

.pt-progress-bar.progress-bar-auto .pt-progress-meter {
  background-color: $qore-purple;
}

.pt-progress-bar.pt-intent-success .pt-progress-meter {
  background-color: $qore-green;
}

